@@ -17,8 +17,8 @@ mydata <- data.frame(y = y, g = g)
 boxplot(y ~ g, data = mydata)
 
 ### uncensored, Cox model, h = bernstein
-Bb <- Bernstein_basis(numeric_var("y", support = c(0, max(y) + .1)), order = 5,
-                      ui = "increasing")
+Bb <- Bernstein_basis(numeric_var("y", support = c(0, max(y) + .1), bounds = c(0, Inf)), 
+                      order = 5, ui = "increasing")
 s <- as.basis(~ g, data = data.frame(g = gf), remove_intercept = TRUE)
 m <- ctm(response = Bb, shifting = s, todist = "MinExtrVal")
 (cf1 <- coef(opt <- mlt(m, data = mydata)))
@@ -37,10 +37,10 @@ lines(survfit(cph, newdata = data.frame(g = gf[2])))
 plot(yn, a[,3], type = "l", col = "red", ylim = c(0, 1))
 lines(survfit(cph, newdata = data.frame(g = gf[3])))
 
-### h = c(log, bernstein)
-lb <- log_basis(numeric_var("y", support = c(.Machine$double.eps, max(y))), 
-                ui = "increasing", remove_intercept = TRUE)
-m <- ctm(response = c(blog = lb, bBern = Bb), shifting = s, todist = "MinExtrVal")
+### h = bernstein(log())
+logBb <- Bernstein_basis(numeric_var("y", support = c(1, max(y) + .1), bounds = c(min(y) / 2, Inf)), 
+                         order = 5, ui = "increasing", log_first = TRUE)
+m <- ctm(response = logBb, shifting = s, todist = "MinExtrVal")
 (cf1 <- coef(opt <- mlt(m, data = mydata)))
 ## sample from this model
 sam <- simulate(opt, newdata = data.frame(g = gf), nsim = 100)
@@ -71,16 +71,13 @@ mydata <- data.frame(y = Surv(y, sample(0:1, length(y), replace = TRUE), type = 
 coef(opt <- mlt(m, data = mydata))
 
 ### interval censoring
-Bb <- Bernstein_basis(numeric_var("y", support = c(0, max(y + 1) + .1)), order = 5,
-                      ui = "increasing")
 mydata <- data.frame(y = Surv(y, y + 1, sample(0:3, length(y), replace = TRUE), type = "interval"), 
                      g = g)
-m <- ctm(response = c(blog = lb, bBern = Bb), shifting = s, todist = "MinExtrVal")
 coef(opt <- mlt(m, data = mydata))
 
 ### uncensored, time-varying coefficints in both groups
 mydata <- data.frame(y = y, g = g)
-m <- ctm(response = Bb, 
+m <- ctm(response = logBb, 
            interacting = as.basis(~ g, data = mydata),
            todist = "MinExtrVal")
 coef(opt <- mlt(m, data = mydata, maxit = 5000))
