@@ -1,6 +1,6 @@
 
-R version 3.4.3 (2017-11-30) -- "Kite-Eating Tree"
-Copyright (C) 2017 The R Foundation for Statistical Computing
+R version 3.6.0 (2019-04-26) -- "Planting of a Tree"
+Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -30,8 +30,8 @@ Loading required package: variables
 +            shift = ~ x1 + x2, data = d)
 > mod <- mlt(m, data = d)
 > coef(mod)
- (Intercept)            y           x1           x2 
--0.605727929  1.055386378  0.027840842  0.006260632 
+(Intercept)           y          x1          x2 
+-1.15423094  1.11402080  0.02335015  0.05999824 
 > 
 > p <- predict(mod, newdata = d)
 > 
@@ -61,29 +61,29 @@ Loading required package: variables
 , , x2 =     2
 
        x1
-prob             1          2          3
-   0.25 -0.1035274 -0.1301827 -0.1566080
-    0.5  0.5356901  0.5093221  0.4829329
+prob            1         2         3
+   0.25 0.3014440 0.2806353 0.2599554
+    0.5 0.9074136 0.8864644 0.8655049
 
 , , x2 =     3
 
        x1
-prob             1          2          3
-   0.25 -0.1093401 -0.1361691 -0.1624829
-    0.5  0.5297605  0.5033911  0.4769976
+prob            1         2         3
+   0.25 0.2477604 0.2266262 0.2058235
+    0.5 0.8535576 0.8325961 0.8116469
 
 > 
 > simulate(mod, nsim = 1, seed = 291, interpolate = FALSE)
- [1] (-1.29976528, -1.2253383] ( 1.15632490,  1.2307519]
- [3] (-0.70434948, -0.6299225] ( 1.23075188,  1.3051789]
- [5] ( 0.70976305,  0.7841900] ( 0.63533608,  0.7097631]
- [7] ( 2.19830256,        Inf] ( 1.45403280,  1.5284598]
- [9] ( 0.03992027,  0.1143473] ( 1.30517885,  1.3796058]
-[11] (-1.22533830, -1.1509113] ( 0.11434725,  0.1887742]
-[13] ( 0.70976305,  0.7841900] ( 0.18877423,  0.2632012]
-[15] ( 0.63533608,  0.7097631] ( 0.85861700,  0.9330440]
-[17] (-1.37419225, -1.2997653] ( 0.18877423,  0.2632012]
-[19] ( 0.03992027,  0.1143473] ( 1.52845978,  1.6028868]
+ [1] (-1.00205738, -0.9276304] ( 0.93304398,  1.0074710]
+ [3] (-0.85320343, -0.7787765] ( 1.52845978,  1.6028868]
+ [5] ( 0.11434725,  0.1887742] ( 1.00747095,  1.0818979]
+ [7] ( 2.19830256,        Inf] ( 1.52845978,  1.6028868]
+ [9] (-0.40664158, -0.3322146] ( 0.78419003,  0.8586170]
+[11] (-0.62992250, -0.5554955] (-0.33221460, -0.2577876]
+[13] ( 0.63533608,  0.7097631] ( 0.33762818,  0.4120552]
+[15] ( 1.00747095,  1.0818979] ( 1.00747095,  1.0818979]
+[17] (       -Inf, -1.4486192] ( 0.03992027,  0.1143473]
+[19] (-0.18336065, -0.1089337] ( 1.45403280,  1.5284598]
 > 
 > d$y <- gl(3, 1, ordered = TRUE)[rep(1:3, length = n)]
 > 
@@ -96,74 +96,79 @@ prob             1          2          3
 > 
 > predict(mod2, q = unique(d$y))
    
-y        [,1]      [,2]       [,3]      [,4]       [,5]       [,6]       [,7]
-  1 0.6046781 0.2544986 -1.4408922 0.1146444 -0.3476360 -1.2583201 -0.5995911
-  2 1.7176813 1.3675019 -0.3278889 1.2276477  0.7653673 -0.1453169  0.5134121
-  3       Inf       Inf        Inf       Inf        Inf        Inf        Inf
+y         [,1]       [,2]       [,3]        [,4]       [,5]        [,6]
+  1 -0.1534210 -0.4300805 -0.4719437 -0.04421458 -0.7513338 -0.08880842
+  2  0.7796158  0.5029564  0.4610931  0.88882224  0.1817030  0.84422840
+  3        Inf        Inf        Inf         Inf        Inf         Inf
    
-y         [,8]       [,9]     [,10]       [,11]     [,12]      [,13]      [,14]
-  1 -0.8376696 -0.9636472 0.3676875 -1.10350139 0.2278333 -0.5707499 -1.4814341
-  2  0.2753336  0.1493560 1.4806907  0.00950184 1.3408365  0.5422533 -0.3684309
-  3        Inf        Inf       Inf         Inf       Inf        Inf        Inf
+y         [,7]       [,8]       [,9]      [,10]       [,11]      [,12]
+  1 -0.2480698 -0.2899331 -0.7231233 -0.6475885 -0.02419586 -0.6921824
+  2  0.6849670  0.6431038  0.2099135  0.2854483  0.90884095  0.2408545
+  3        Inf        Inf        Inf        Inf         Inf        Inf
    
-y        [,15]      [,16]      [,17]      [,18]      [,19]     [,20]
-  1 -0.8227051 -0.1639760 -0.2899536 -1.3127387 -0.4298078 0.4531231
-  2  0.2902982  0.9490272  0.8230496 -0.1997355  0.6831954 1.5661264
-  3        Inf        Inf        Inf        Inf        Inf       Inf
+y        [,13]      [,14]      [,15]      [,16]      [,17]      [,18]
+  1 -0.4209840 -0.3454492 -0.1525162 -0.2335122 -0.6275698 -0.5520350
+  2  0.5120528  0.5875876  0.7805206  0.6995246  0.3054670  0.3810019
+  3        Inf        Inf        Inf        Inf        Inf        Inf
+   
+y        [,19]      [,20]
+  1 -0.5938982 -0.4009653
+  2  0.3391386  0.5320715
+  3        Inf        Inf
 > 
 > predict(mod2, prob = 1:9 / 10, type = "quantile")
-  [1] 1 1 1 1 1 1 1 2 2 1 1 1 1 1 1 2 2 2 2 2 2 3 3 3 3 3 3 1 1 1 1 1 2 2 2 3 1
- [38] 1 1 2 2 2 2 3 3 1 2 2 2 3 3 3 3 3 1 1 2 2 2 2 3 3 3 1 1 2 2 2 2 3 3 3 1 2
- [75] 2 2 2 3 3 3 3 1 1 1 1 1 1 2 2 2 1 2 2 2 2 3 3 3 3 1 1 1 1 1 2 2 2 2 1 1 2
-[112] 2 2 2 2 3 3 2 2 2 3 3 3 3 3 3 1 1 2 2 2 2 3 3 3 1 1 1 1 2 2 2 2 3 1 1 1 2
-[149] 2 2 2 3 3 2 2 2 2 3 3 3 3 3 1 1 1 2 2 2 2 3 3 1 1 1 1 1 1 2 2 2
+  [1] 1 1 1 1 2 2 2 3 3 1 1 1 2 2 2 3 3 3 1 1 1 2 2 2 3 3 3 1 1 1 1 2 2 2 2 3 1
+ [38] 1 2 2 2 3 3 3 3 1 1 1 1 2 2 2 2 3 1 1 1 1 2 2 2 3 3 1 1 1 2 2 2 2 3 3 1 1
+ [75] 2 2 2 3 3 3 3 1 1 2 2 2 2 3 3 3 1 1 1 1 2 2 2 2 3 1 1 2 2 2 3 3 3 3 1 1 1
+[112] 2 2 2 3 3 3 1 1 1 2 2 2 2 3 3 1 1 1 1 2 2 2 3 3 1 1 1 1 2 2 2 3 3 1 1 2 2
+[149] 2 2 3 3 3 1 1 2 2 2 2 3 3 3 1 1 2 2 2 2 3 3 3 1 1 1 2 2 2 2 3 3
 Levels: 1 < 2 < 3
 > 
 > simulate(mod2, nsim = 3, seed = 29)
 [[1]]
- [1] 1 1 2 1 2 1 3 3 1 1 3 1 2 3 1 2 2 2 3 1
+ [1] 1 1 1 1 3 1 3 3 1 1 3 2 1 2 1 3 3 2 3 2
 Levels: 1 < 2 < 3
 
 [[2]]
- [1] 1 2 3 3 2 2 2 3 3 1 2 1 1 3 2 1 3 2 1 1
+ [1] 2 2 3 3 3 1 2 3 3 1 1 1 1 3 2 1 3 2 2 1
 Levels: 1 < 2 < 3
 
 [[3]]
- [1] 1 1 3 2 1 3 3 3 3 2 2 2 1 3 2 2 2 3 2 1
+ [1] 2 1 3 2 1 3 3 2 3 3 1 3 1 2 2 2 2 3 2 1
 Levels: 1 < 2 < 3
 
 > 
 > predict(mod2, q = unique(d$y), type = "density")
-        [,1]       [,2]       [,3]      [,4]      [,5]      [,6]      [,7]
-1 0.72730355 0.60044482 0.07480758 0.5456365 0.3640568 0.1041380 0.2743894
-2 0.22976907 0.31382115 0.29669025 0.3445738 0.4139168 0.3380923 0.4217791
-3 0.04292738 0.08573403 0.62850218 0.1097896 0.2220264 0.5577697 0.3038315
-       [,8]      [,9]     [,10]     [,11]      [,12]     [,13]      [,14]
-1 0.2011081 0.1676114 0.6434469 0.1349047 0.59011209 0.2840846 0.06924547
-2 0.4073619 0.3917522 0.2872086 0.3688859 0.31990115 0.4220934 0.28703052
-3 0.3915300 0.4406364 0.0693445 0.4962094 0.08998676 0.2938220 0.64372401
-      [,15]     [,16]     [,17]     [,18]     [,19]      [,20]
-1 0.2053379 0.4348750 0.3859259 0.0946355 0.3336677 0.67476996
-2 0.4088681 0.3938216 0.4088342 0.3262082 0.4190906 0.26657052
-3 0.3857941 0.1713034 0.2052399 0.5791563 0.2472417 0.05865952
+       [,1]      [,2]      [,3]      [,4]      [,5]      [,6]      [,7]
+1 0.4390332 0.3335686 0.3184835 0.4823667 0.2262259 0.4646171 0.4020402
+2 0.3431583 0.3589340 0.3591506 0.3305840 0.3458662 0.3361120 0.3512774
+3 0.2178085 0.3074975 0.3223659 0.1870493 0.4279079 0.1992709 0.2466824
+       [,8]      [,9]     [,10]     [,11]     [,12]     [,13]     [,14]
+1 0.3859337 0.2348021 0.2586256 0.4903482 0.2444114 0.3368834 0.3648784
+2 0.3539879 0.3483303 0.3537241 0.3279348 0.3507546 0.3588096 0.3567171
+3 0.2600784 0.4168676 0.3876504 0.1817170 0.4048340 0.3043070 0.2784046
+      [,15]     [,16]     [,17]     [,18]     [,19]     [,20]
+1 0.4393899 0.4076818 0.2651429 0.2904622 0.2762901 0.3442228
+2 0.3430678 0.3502060 0.3548519 0.3579369 0.3564572 0.3584389
+3 0.2175423 0.2421121 0.3800052 0.3516009 0.3672527 0.2973382
 > 
 > predict(mod2, list(y = unique(d$y), x1 = 1:3, x2 = 2:3), type = "density")
 , ,     2
 
-           1          2          3
-1 0.76324478 0.75894172 0.75459648
-2 0.20311397 0.20636586 0.20963310
-3 0.03364125 0.03469242 0.03577042
+          1         2         3
+1 0.5012406 0.5001513 0.4990620
+2 0.3241605 0.3245461 0.3249299
+3 0.1745988 0.1753026 0.1760081
 
 , ,     3
 
-           1          2          3
-1 0.72730355 0.72267327 0.71800488
-2 0.22976907 0.23311794 0.23647426
-3 0.04292738 0.04420879 0.04552086
+          1         2         3
+1 0.4856321 0.4845435 0.4834550
+2 0.3295122 0.3298714 0.3302286
+3 0.1848557 0.1855851 0.1863163
 
 > 
 > 
 > proc.time()
    user  system elapsed 
-  2.272   0.056   2.325 
+  0.880   0.055   0.929 
